workaround IDEA/kotlin/gradle bugs